$Id: ChangeLog 3811 2013-04-20 17:10:41Z chrfranke $

2013-04-20  Christian Franke  <franke@computer.org>

	configure.ac: Linux: Try 'hostname -y' if 'nishostname' is missing.

2013-04-18  Christian Franke  <franke@computer.org>

	configure.ac, smartd_warning.sh.in: Add platform specific commands for
	host and domain names.
	os_win32/smartd_warning.cmd: Use WMI for DNS domain name.

2013-04-18  Christian Franke  <franke@computer.org>

	scsicmds.cpp, scsiprint.cpp: Silence -Wmaybe-uninitialized warning
	(g++ 4.8.0 with -flto).

2013-03-29  Christian Franke  <franke@computer.org>

	os_darwin.cpp: Silence -Wself-assign warning (ticket #266).
	os_darwin.cpp, os_netbsd.cpp, os_os2.cpp, os_qnxnto.cpp, os_solaris.cpp:
	Remove dummy functions no longer called since r3192.

2013-03-27  Christian Franke  <franke@computer.org>

	os_win32.cpp: Silence -Wunused-local-typedefs warning.

2013-03-24  Christian Franke  <franke@computer.org>

	dev_areca.cpp: Add casts to silence C++11 -Wnarrowing warning
	from g++ 4.8.

2013-03-24  Christian Franke  <franke@computer.org>

	Windows: Compile fixes for 64-bit Cygwin.
	It uses LP64 model instead of LLP64 (64-bit MSVC, MinGW).

2013-03-16  Christian Franke  <franke@computer.org>

	smartmontools 6.1

2013-03-15  Christian Franke  <franke@computer.org>

	os_win32.cpp: Support device names /dev/sd[a-z][a-z] (ticket #240).
	Enhance DEVICESCAN to 128 drives.  Add '-d [TYPE,]pd' option.
	smartctl.8.in, smartd.8.in: Document these enhancements.

2013-03-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Barracuda 7200.14: Fix regex for new firmware version.

2013-03-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Prolific PL3507 (0x067b:0x3507): works with '-d usbjmicron,p'

2013-03-13  Christian Franke  <franke@computer.org>

	Create branch RELEASE_6_0_DRIVEDB with last drivedb.h file
	compatible with smartmontools 6.0.

2013-03-13  Christian Franke  <franke@computer.org>

	drivedb.h: